--- a/src/main/resources/templates/menu/button2/admin/classHero/classAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/classHero/classAdd.html
@@ -20,7 +20,7 @@
                 </p>
                 <input type="text" name="classHero" placeholder="Ведите имя класса" class="form-control"><br>
 
-                <textarea name="full_text" placeholder="Ведите полное описание класса" class="form-control"></textarea><br>
+                <textarea name="full_text" placeholder="Ведите полное описание класса" class="form-control" rows="20"></textarea><br>
 
                 <button type="submit" class="btn btn-success">Добавить</button>
             </form>
