--- a/src/main/resources/templates/menu/button2/admin/hero/heroAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/hero/heroAdd.html
@@ -25,7 +25,7 @@
 
 
 
-                <input name="tear" class="form-control" list="datalistOptions" id="exampleDataList" placeholder="выберите тир героя"><br>
+                <input name="tear" class="form-control" list="datalistOptions" id="exampleDataList" placeholder="выберите тир героя" required><br>
                 <datalist id="datalistOptions">
                     <option value="ТИР 1">
                     <option value="ТИР 2">
@@ -54,7 +54,7 @@
                 </datalist>
 
                 
-                <textarea name="full_text" placeholder="Ведите полное описание героя" class="form-control"></textarea><br>
+                <textarea name="full_text" placeholder="Ведите полное описание героя" class="form-control" rows="20"></textarea><br>
 
                 <button type="submit" class="btn btn-success">Добавить</button>
             </form>
