--- a/src/main/resources/static/css/css.css
+++ b/src/main/resources/static/css/css.css
@@ -1,11 +1,53 @@
-.fon{
-    background-image: url("/image/fon4.jpg");
+
+.badge.rounded-pill.bg-secondary{
+    background-image: url("/image/djaga2.png");
     object-fit: contain;
-     background-size: no-repeat;
-     background-attachment: fixed;
-     background-position: 50% 15%;
-     width: 100%;
+    background-size: auto;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    color: #f2bf0b;
 }
+.secondary{
+    background-image: url("/image/djaga2.png");
+    object-fit: contain;
+    background-size: auto;
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+    color: #f2bf0b;
+    width:100%;
+    height: 100%;
+}
+
+.link-dark{
+    color: rgb(255, 255, 255);
+    
+}
+.link-dark2{
+    color: rgb(255, 255, 255);
+    }
+.link-dark2::first-letter{
+    color: red;
+}
+
+h3::first-letter{
+    color: rgb(255, 0, 0);
+    font-weight: 900;
+}
+.t1{
+    background-color: black;
+    border-radius: 50px;
+    padding-left: 16px;
+    padding-right: 16px;
+    padding-top: 6px;
+    padding-bottom: 6px;
+}
+
+.featured-article__tag__count{
+    color: red;
+}
+
 
 
 header{
@@ -13,9 +55,9 @@ header{
 }
 
 #blokc{
-   
-   margin-left: 5%;
-   margin-right: 5%;
+   object-position: center;
+   margin-left: auto;
+   margin-top: auto;
 }
 
 logoimage{
@@ -30,10 +72,10 @@ logoimage{
 }
 
 #pading{
-    background-color: whitesmoke;
+    
     padding: 20px;
     padding-bottom: 150px;
-    
+    border: none;
     
 }
 
@@ -62,15 +104,17 @@ body{
   border: 0;  
   width: 100%;
   border-radius: 0;
+  color: #f2bf0b;
 }
 .btn.btn-dark{
     padding-left: 0px;
     padding-right: 0px;
 }
 
+
 .btn-group{
-    margin-top: 20px;
-    width: 303.5px;
+    width: 200px;
+    height: 70px;
     
 }
 .dropdown-menu{
