--- a/src/main/resources/templates/blocks/menuRightAdmin.html
+++ b/src/main/resources/templates/blocks/menuRightAdmin.html
@@ -13,6 +13,19 @@
           Добавить героя
         </a>
       </li>
+
+      <li class="nav-item">
+        <a class="nav-link active" aria-current="page" href="/admin/add/guide">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+               fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+               stroke-linejoin="round" class="feather feather-home align-text-bottom"
+               aria-hidden="true">
+            <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
+            <polyline points="9 22 9 12 15 12 15 22"></polyline>
+          </svg>
+          Добавить гайд
+        </a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="/admin/add/skill">
           <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
@@ -65,6 +78,37 @@
           Добавить класс
         </a>
       </li>
+
+
+    <li class="nav-item">
+      <a class="nav-link" href="/admin/add/energising">
+        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+             fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+             stroke-linejoin="round" class="feather feather-file-text align-text-bottom"
+             aria-hidden="true">
+          <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+          <polyline points="14 2 14 8 20 8"></polyline>
+          <line x1="16" y1="13" x2="8" y2="13"></line>
+          <line x1="16" y1="17" x2="8" y2="17"></line>
+          <polyline points="10 9 9 9 8 9"></polyline>
+        </svg>
+        Добавить синргию
+      </a>
+    </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/add/path">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+               fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+               stroke-linejoin="round" class="feather feather-bar-chart-2 align-text-bottom"
+               aria-hidden="true">
+            <line x1="18" y1="20" x2="18" y2="10"></line>
+            <line x1="12" y1="20" x2="12" y2="4"></line>
+            <line x1="6" y1="20" x2="6" y2="14"></line>
+          </svg>
+          Добавить патч
+        </a>
+      </li>
     </ul>
 
 
@@ -94,6 +138,22 @@
             <polyline points="10 9 9 9 8 9"></polyline>
           </svg>
           Изменить или Удалить героя
+        </a>
+      </li>
+
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/display/guide">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+               fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+               stroke-linejoin="round" class="feather feather-file-text align-text-bottom"
+               aria-hidden="true">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+            <polyline points="14 2 14 8 20 8"></polyline>
+            <line x1="16" y1="13" x2="8" y2="13"></line>
+            <line x1="16" y1="17" x2="8" y2="17"></line>
+            <polyline points="10 9 9 9 8 9"></polyline>
+          </svg>
+          Изменить или Удалить гайд
         </a>
       </li>
       <li class="nav-item">
@@ -157,8 +217,37 @@
         </a>
       </li>
 
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/display/energising">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+               fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+               stroke-linejoin="round" class="feather feather-file-text align-text-bottom"
+               aria-hidden="true">
+            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"></path>
+            <polyline points="14 2 14 8 20 8"></polyline>
+            <line x1="16" y1="13" x2="8" y2="13"></line>
+            <line x1="16" y1="17" x2="8" y2="17"></line>
+            <polyline points="10 9 9 9 8 9"></polyline>
+          </svg>
+          Изменить или Удалить Синергию
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/admin/display/path">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
+               fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round"
+               stroke-linejoin="round" class="feather feather-bar-chart-2 align-text-bottom"
+               aria-hidden="true">
+            <line x1="18" y1="20" x2="18" y2="10"></line>
+            <line x1="12" y1="20" x2="12" y2="4"></line>
+            <line x1="6" y1="20" x2="6" y2="14"></line>
+          </svg>
+          Изменить патч
+        </a>
+      </li>
+
       <li>
-        <a href="/logout" class="nav-link text-white">
+        <a href="/logout" class="nav-link text-black">
           <svg class="bi d-block mx-auto mb-12" width="24" height="24"><use xlink:href="#people-circle"></use></svg>
           logout
         </a>
