--- a/src/main/resources/templates/menu/button1/autoChess.html
+++ b/src/main/resources/templates/menu/button1/autoChess.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
-    <link th:href="@{/css/fon.css}" rel="stylesheet">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
               integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
               crossorigin="anonymous">
@@ -11,29 +11,33 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
-<div class="fon">
+<div>
             <div id="blokc">
-                <div  class="top" th:insert="blocks/menuTop :: div"></div>
-                    <div class="border border-dark" id="pading">
-                        <article class="featured-article">			
 
-                            <p class="h2">Dota&nbsp;2 Auto Chess</p>
+                    <div id="pading">
+                        <article class="featured-article">	
+                            <ul  class="nav justify-content-center">
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/"><h3>Dota&nbsp;2 Auto Chess<sup class="featured-article__tag__count" th:text="${sumSkill}"></sup></h3></a></span>
+
+                            </ul>		
+
+                        
                 
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count" th:text="${sumHero}"></sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/weapon"><h3>Предметы<sup class="featured-article__tag__count" ></sup>94</h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i><t class="t1">Герои<sup class="featured-article__tag__count" th:text="${sumHero}"></sup></t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/weapon"><h3><t class="t1">Предметы<sup class="featured-article__tag__count" th:text="${sumItems}"></sup></t></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/ras"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/class"><h3>Классы<sup class="featured-article__tag__count" th:text="${sumClass}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/ras"><h3><t class="t1">Расы<sup class="featured-article__tag__count" th:text="${sumRas}"></sup></t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/class"><h3><t class="t1">Классы<sup class="featured-article__tag__count" th:text="${sumClass}"></sup></t></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/path"><h3>Патчи</h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/start/display/basic-rules"><h3>Механики игры</h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/path"><h3><t class="t1">Патчи</t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/whatgame"><h3><t class="t1">Механика игры</t></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/skill"><h3>Абилки</h3></a></span>
-
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/skill"><h3>Абилки<sup class="featured-article__tag__count" th:text="${sumSkill}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/home/display/guide"><h3><t class="t1">Гайды<sup class="featured-article__tag__count" th:text="${guide}"></sup></t></h3></a></span>
                             </ul>
                 
                         </article>
