--- a/src/main/resources/templates/menu/button1/autoChessAdmin.html
+++ b/src/main/resources/templates/menu/button1/autoChessAdmin.html
@@ -11,22 +11,27 @@
 
 <body>
 <header th:insert="blocks/headerFooter/header :: header"></header>
+<div class="row">
+<nav id="sidebarMenu" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse"
+     th:insert="blocks/menuRightAdmin ::div"></nav>
+<main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
 <div class="fon">
             <div id="blokc">
-                <div  class="top" th:insert="blocks/menuTop :: div"></div>
+
                     <div class="border border-dark" id="pading">
                         <article class="featured-article">			
 
                             <p class="h2">Dota&nbsp;2 Auto Chess</p>
                 
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count">107</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/items"><h3>Предметы<sup class="featured-article__tag__count">94</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/hero"><h3><i class="fa-solid fa-chess-pawn"></i>Герои<sup class="featured-article__tag__count" th:text="${sumHero}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/items"><h3>Предметы<sup class="featured-article__tag__count" th:text="${sumItems}"></sup></h3></a></span>
                             </ul>
                             <ul  class="nav justify-content-center">
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/ras"><h3>Расы<sup class="featured-article__tag__count">17</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/class"><h3>Классы<sup class="featured-article__tag__count">17</sup></h3></a></span>
-                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/skill"><h3>Абилка<sup class="featured-article__tag__count">17</sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/ras"><h3>Расы<sup class="featured-article__tag__count" th:text="${sumRas}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/path"><h3><t class="t1">Патчи</t></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/class"><h3>Классы<sup class="featured-article__tag__count" th:text="${sumClass}"></sup></h3></a></span>
+                                <span class="badge rounded-pill bg-secondary"><a class="link-dark" href="/admin/display/skill"><h3>Абилка<sup class="featured-article__tag__count" th:text="${sumSkill}"></sup></h3></a></span>
                             </ul>
 
                 
@@ -38,6 +43,8 @@
         
         
     
+</div>
+</main>
 </div>
 <footer th:insert="blocks/headerFooter/footer :: footer"></footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
