--- a/src/main/resources/templates/menu/button2/admin/classHero/classEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/classHero/classEdit.html
@@ -21,7 +21,7 @@
                 </p>
                 <input th:value="${class.name}" type="text" name="className"  placeholder="Ведите имя класса" class="form-control"><br>
 
-                <textarea name="detals" th:text="${class.detals}" class="form-control"></textarea><br>
+                <textarea name="detals" th:text="${class.detals}" class="form-control" rows="20"></textarea><br>
 
                 <button type="submit" class="btn btn-success">Обновить</button>
                 <a th:href="@{'/admin/delete/class/' + ${class.id}}" class="btn btn-success">Удалить</a>
