--- a/src/main/resources/templates/menu/button2/admin/items/itemsAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/items/itemsAdd.html
@@ -14,18 +14,33 @@
 
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h1>Добавление оружие</h1>
-            <form th:action="@{/admin/weapon}" method="post" enctype="multipart/form-data">
+            <form th:action="@{/admin/add/items}" method="post" enctype="multipart/form-data">
                 <p>вставте икону предмета
                 <input type="file" name="iconWeapon">
                 </p>
-                <input type="text" name="weapon" placeholder="Ведите имя скила" class="form-control"><br>
-                <input type="text" name="species" placeholder="Ведите из чего собираються" class="form-control"><br>
-                <input type="text" name="tirWeapon" placeholder="Ведите тир предмета" class="form-control"><br>
-                <input type="file" name="iconWeapon2"><br>
-                <input type="file" name="iconWeapon3"><br>
-                <input type="file" name="iconWeapon4"><br>
+                <input type="text" name="weapon" placeholder="Ведите имя предмета" class="form-control"><br>
+                <input type="text" name="items1" list="datalistOptions1" placeholder="Ведите из чего собираються" class="form-control"><br>
+                <datalist id="datalistOptions1">
+                    <option th:each="weapon : ${items}"> <t th:text="${weapon.name}"></t></option>
+                </datalist>
 
-                <textarea name="full_text" placeholder="Ведите полное описание скила" class="form-control"></textarea><br>
+
+                <input type="text" name="items2" list="datalistOptions1" placeholder="Ведите из чего собираються" class="form-control"><br>
+
+                <input type="text" name="items3" list="datalistOptions1" placeholder="Ведите из чего собираються" class="form-control"><br>
+
+
+                <input type="text" name="tirWeapon" list="datalist"  id="exampleDataList" placeholder="Ведите тир предмета" class="form-control" required><br>
+                <datalist id="datalist">
+                    <option value="ТИР 1">
+                    <option value="ТИР 2">
+                    <option value="ТИР 3">
+                    <option value="ТИР 4">
+                    <option value="ТИР 5">
+                </datalist>
+
+
+                <textarea name="full_text" placeholder="Ведите полное описание скила" class="form-control" rows="20"></textarea><br>
 
                 <button type="submit" class="btn btn-success">Добавить</button>
             </form>
