--- a/src/main/resources/templates/menu/button2/admin/ras/rasAdd.html
+++ b/src/main/resources/templates/menu/button2/admin/ras/rasAdd.html
@@ -15,13 +15,12 @@
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h1>Добавление расы</h1>
             <form th:action="@{/admin/add/ras}" method="post" enctype="multipart/form-data">
-                <p>вставте икону расы
-                <input type="file" name="iconClassHero">
-                </p>
-                <input type="text" name="classHero" placeholder="Ведите имя класса" class="form-control"><br>
+                <input type="text" name="name" list="datalistOptions" id="exampleDataList"  placeholder="Ведите имя класса" class="form-control"><br>
 
-                <textarea name="full_text" placeholder="Ведите полное описание класса" class="form-control"></textarea><br>
+                <datalist id="datalistOptions">
+                    <option th:each="ras :${rassa}" th:value="${ras.name}"></option>
 
+                </datalist>
                 <button type="submit" class="btn btn-success">Добавить</button>
             </form>
 
