--- a/src/main/resources/templates/menu/button2/admin/ras/rasEdit.html
+++ b/src/main/resources/templates/menu/button2/admin/ras/rasEdit.html
@@ -16,12 +16,8 @@
         <main class="col-md-9 ms-sm-auto col-lg-10 px-md-4">
             <h1>Обнавление Расы</h1>
             <form th:action="@{'/admin/edit/ras/' + ${ras.id}} " method="post" enctype="multipart/form-data">
-                <p>вставте икону расы
-                    <input type="file" name="iconClassHero" th:value="${iconClassHero}">
-                </p>
-                <input th:value="${ras.name}" type="text" name="className"  placeholder="Ведите имя класса" class="form-control"><br>
 
-                <textarea name="detals" th:text="${ras.detals}" class="form-control"></textarea><br>
+                <input th:value="${ras.name}" type="text" name="name"  placeholder="Ведите имя класса" class="form-control"><br>
 
                 <button type="submit" class="btn btn-success">Обновить</button>
                 <a th:href="@{'/admin/delete/ras/' + ${ras.id}}" class="btn btn-success">Удалить</a>
